@@ -3,6 +3,7 @@ package com.example.micorservices.movie_catelog_service.resources;
 import com.example.micorservices.movie_catelog_service.models.CatalogItem;
 import com.example.micorservices.movie_catelog_service.models.Movie;
 import com.example.micorservices.movie_catelog_service.models.UserRating;
+import com.netflix.hystrix.contrib.javanica.annotation.HystrixCommand;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -11,6 +12,7 @@ import org.springframework.web.client.RestTemplate;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/catalog")
@@ -21,14 +23,23 @@ public class MovieCatalogService {
 
     @Autowired
     private WebClient.Builder webClientBuilder;
+
     @RequestMapping("/{userId}")
+    @HystrixCommand(fallbackMethod = "getFallbackCatalog")
     public List<CatalogItem> getCatalog(@PathVariable("userId") String userId)
     {
         UserRating userRating = restTemplate.getForObject("http://ratings-data-service/ratingsdata/user/"+userId, UserRating.class);
         return userRating.getUserRating().stream().map(rating -> {
             Movie movie = restTemplate.getForObject("http://movie-info-service/movies/"+rating.getMovieId(), Movie.class );
-            return new CatalogItem(movie.getName(), "Awesome", rating.getRating());
-        }).toList();
+            return new CatalogItem(movie.getName(), movie.getDescription(), rating.getRating());
+        }).collect(Collectors.toList());
+    }
+
+    public List<CatalogItem> getFallbackCatalog(String userId, Throwable ex)
+    {
+        System.out.println("Reason for --->"+ ex);
+        ex.printStackTrace();
+        return List.of(new CatalogItem("No Movie", "", 0));
     }
 }
 
